quorum/test/tests/TypeChecker/Pass/BooleanEquals.quorum
class Main
    action Main
        Boolean t 
        t:SetValue(true)
        boolean p = true

        print t:Equals(false)
        print p:Equals(false)
    end
end