quorum/test/tests/TypeChecker/Fail/ImpAssignIntObjBoolObjWrapped.quorum
class main
    action main
        Boolean bool
        bool:setValue(true)
        Integer i = bool
    end
end